src/lexer.cpp

/* #line 1 "modules\\blt\\meta\\lexer.rl" */
// lexer.cpp - AUTO-GENERATED - DO NOT MODIFY!
// compile with `ragel -L -G1 -o src/lexer.cpp meta/lexer.rl`
#include "pch.hpp"
#include "lexer.hpp"
#include <be/core/exceptions.hpp>

#define BE_BLT_TOKEN_ESTIMATE_RATIO 0.2

namespace be::blt {
namespace {

/* #line 12 "modules\\blt\\src\\lexer.cpp" */
static const int blt_lexer_start = 8;
static const int blt_lexer_first_final = 8;
static const int blt_lexer_error = -1;

static const int blt_lexer_en_main = 8;


/* #line 114 "modules\\blt\\meta\\lexer.rl" */

} // be::blt::()

///////////////////////////////////////////////////////////////////////////////
void Lexer::lex_backtick_(gsl::cstring_span<> contents) {
   p_ = contents.data();
   pe_ = p_ + contents.length();
   const char* eof = pe_;
   int cs;
   int act;
   
   
/* #line 29 "modules\\blt\\src\\lexer.cpp" */
	{
	cs = blt_lexer_start;
	( ts_) = 0;
	( te_) = 0;
	act = 0;
	}

/* #line 126 "modules\\blt\\meta\\lexer.rl" */
   
/* #line 35 "modules\\blt\\src\\lexer.cpp" */
	{
	if ( ( p_) == ( pe_) )
		goto _test_eof;
	switch ( cs )
	{
tr0:
/* #line 111 "modules\\blt\\meta\\lexer.rl" */
	{{( p_) = ((( te_)))-1;}{ t_(TokenType::invalid_character); }}
	goto st8;
tr2:
/* #line 53 "modules\\blt\\meta\\lexer.rl" */
	{( te_) = ( p_)+1;{ t_(TokenType::string_literal); check_newlines_(); }}
	goto st8;
tr6:
/* #line 52 "modules\\blt\\meta\\lexer.rl" */
	{{( p_) = ((( te_)))-1;}{ t_(TokenType::numeric_literal); }}
	goto st8;
tr12:
/* #line 111 "modules\\blt\\meta\\lexer.rl" */
	{( te_) = ( p_)+1;{ t_(TokenType::invalid_character); }}
	goto st8;
tr14:
/* #line 47 "modules\\blt\\meta\\lexer.rl" */
	{( te_) = ( p_)+1;{
         ls_ = te_;
         ++line_;
      }}
	goto st8;
tr17:
/* #line 106 "modules\\blt\\meta\\lexer.rl" */
	{( te_) = ( p_)+1;{ t_(TokenType::pound); }}
	goto st8;
tr18:
/* #line 107 "modules\\blt\\meta\\lexer.rl" */
	{( te_) = ( p_)+1;{ t_(TokenType::dollars); }}
	goto st8;
tr19:
/* #line 91 "modules\\blt\\meta\\lexer.rl" */
	{( te_) = ( p_)+1;{ t_(TokenType::percent); }}
	goto st8;
tr22:
/* #line 76 "modules\\blt\\meta\\lexer.rl" */
	{( te_) = ( p_)+1;{ t_(TokenType::paren_opener); }}
	goto st8;
tr23:
/* #line 77 "modules\\blt\\meta\\lexer.rl" */
	{( te_) = ( p_)+1;{ t_(TokenType::paren_closer); }}
	goto st8;
tr24:
/* #line 88 "modules\\blt\\meta\\lexer.rl" */
	{( te_) = ( p_)+1;{ t_(TokenType::star); }}
	goto st8;
tr25:
/* #line 86 "modules\\blt\\meta\\lexer.rl" */
	{( te_) = ( p_)+1;{ t_(TokenType::plus); }}
	goto st8;
tr26:
/* #line 82 "modules\\blt\\meta\\lexer.rl" */
	{( te_) = ( p_)+1;{ t_(TokenType::comma); }}
	goto st8;
tr32:
/* #line 85 "modules\\blt\\meta\\lexer.rl" */
	{( te_) = ( p_)+1;{ t_(TokenType::colon); }}
	goto st8;
tr33:
/* #line 73 "modules\\blt\\meta\\lexer.rl" */
	{( te_) = ( p_)+1;{ t_(TokenType::semicolon); }}
	goto st8;
tr37:
/* #line 84 "modules\\blt\\meta\\lexer.rl" */
	{( te_) = ( p_)+1;{ t_(TokenType::question); }}
	goto st8;
tr39:
/* #line 78 "modules\\blt\\meta\\lexer.rl" */
	{( te_) = ( p_)+1;{ t_(TokenType::bracket_opener); }}
	goto st8;
tr40:
/* #line 79 "modules\\blt\\meta\\lexer.rl" */
	{( te_) = ( p_)+1;{ t_(TokenType::bracket_closer); }}
	goto st8;
tr41:
/* #line 92 "modules\\blt\\meta\\lexer.rl" */
	{( te_) = ( p_)+1;{ t_(TokenType::chevron); }}
	goto st8;
tr53:
/* #line 74 "modules\\blt\\meta\\lexer.rl" */
	{( te_) = ( p_)+1;{ t_(TokenType::brace_opener); }}
	goto st8;
tr55:
/* #line 75 "modules\\blt\\meta\\lexer.rl" */
	{( te_) = ( p_)+1;{ t_(TokenType::brace_closer); }}
	goto st8;
tr57:
/* #line 46 "modules\\blt\\meta\\lexer.rl" */
	{( te_) = ( p_);( p_)--;{ }}
	goto st8;
tr58:
/* #line 47 "modules\\blt\\meta\\lexer.rl" */
	{( te_) = ( p_);( p_)--;{
         ls_ = te_;
         ++line_;
      }}
	goto st8;
tr59:
/* #line 111 "modules\\blt\\meta\\lexer.rl" */
	{( te_) = ( p_);( p_)--;{ t_(TokenType::invalid_character); }}
	goto st8;
tr60:
/* #line 93 "modules\\blt\\meta\\lexer.rl" */
	{( te_) = ( p_);( p_)--;{ t_(TokenType::amp); }}
	goto st8;
tr61:
/* #line 104 "modules\\blt\\meta\\lexer.rl" */
	{( te_) = ( p_)+1;{ t_(TokenType::amp2); }}
	goto st8;
tr62:
/* #line 87 "modules\\blt\\meta\\lexer.rl" */
	{( te_) = ( p_);( p_)--;{ t_(TokenType::minus); }}
	goto st8;
tr64:
/* #line 80 "modules\\blt\\meta\\lexer.rl" */
	{( te_) = ( p_);( p_)--;{ t_(TokenType::dot); }}
	goto st8;
tr65:
/* #line 81 "modules\\blt\\meta\\lexer.rl" */
	{( te_) = ( p_)+1;{ t_(TokenType::dot2); }}
	goto st8;
tr67:
/* #line 52 "modules\\blt\\meta\\lexer.rl" */
	{( te_) = ( p_);( p_)--;{ t_(TokenType::numeric_literal); }}
	goto st8;
tr69:
/* #line 89 "modules\\blt\\meta\\lexer.rl" */
	{( te_) = ( p_);( p_)--;{ t_(TokenType::slash); }}
	goto st8;
tr70:
/* #line 90 "modules\\blt\\meta\\lexer.rl" */
	{( te_) = ( p_)+1;{ t_(TokenType::slash2); }}
	goto st8;
tr72:
/* #line 100 "modules\\blt\\meta\\lexer.rl" */
	{( te_) = ( p_);( p_)--;{ t_(TokenType::left); }}
	goto st8;
tr73:
/* #line 97 "modules\\blt\\meta\\lexer.rl" */
	{( te_) = ( p_)+1;{ t_(TokenType::left2); }}
	goto st8;
tr74:
/* #line 102 "modules\\blt\\meta\\lexer.rl" */
	{( te_) = ( p_)+1;{ t_(TokenType::left_eq); }}
	goto st8;
tr75:
/* #line 83 "modules\\blt\\meta\\lexer.rl" */
	{( te_) = ( p_);( p_)--;{ t_(TokenType::eq); }}
	goto st8;
tr76:
/* #line 98 "modules\\blt\\meta\\lexer.rl" */
	{( te_) = ( p_)+1;{ t_(TokenType::eq2); }}
	goto st8;
tr77:
/* #line 101 "modules\\blt\\meta\\lexer.rl" */
	{( te_) = ( p_);( p_)--;{ t_(TokenType::right); }}
	goto st8;
tr78:
/* #line 103 "modules\\blt\\meta\\lexer.rl" */
	{( te_) = ( p_)+1;{ t_(TokenType::right_eq); }}
	goto st8;
tr79:
/* #line 96 "modules\\blt\\meta\\lexer.rl" */
	{( te_) = ( p_)+1;{ t_(TokenType::right2); }}
	goto st8;
tr80:
/* #line 1 "NONE" */
	{	switch( act ) {
	case 5:
	{{( p_) = ((( te_)))-1;} t_(TokenType::kw_if); }
	break;
	case 6:
	{{( p_) = ((( te_)))-1;} t_(TokenType::kw_else); }
	break;
	case 7:
	{{( p_) = ((( te_)))-1;} t_(TokenType::kw_while); }
	break;
	case 8:
	{{( p_) = ((( te_)))-1;} t_(TokenType::kw_for); }
	break;
	case 9:
	{{( p_) = ((( te_)))-1;} t_(TokenType::kw_with); }
	break;
	case 10:
	{{( p_) = ((( te_)))-1;} t_(TokenType::kw_each); }
	break;
	case 11:
	{{( p_) = ((( te_)))-1;} t_(TokenType::kw_using); }
	break;
	case 12:
	{{( p_) = ((( te_)))-1;} t_(TokenType::kw_choose); }
	break;
	case 13:
	{{( p_) = ((( te_)))-1;} t_(TokenType::kw_break); }
	break;
	case 14:
	{{( p_) = ((( te_)))-1;} t_(TokenType::kw_continue); }
	break;
	case 15:
	{{( p_) = ((( te_)))-1;} t_(TokenType::kw_until); }
	break;
	case 16:
	{{( p_) = ((( te_)))-1;} t_(TokenType::kw_and); }
	break;
	case 17:
	{{( p_) = ((( te_)))-1;} t_(TokenType::kw_or); }
	break;
	case 18:
	{{( p_) = ((( te_)))-1;} t_(TokenType::kw_not); }
	break;
	case 19:
	{{( p_) = ((( te_)))-1;} t_(TokenType::kw_nil); }
	break;
	case 20:
	{{( p_) = ((( te_)))-1;} t_(TokenType::kw_false); }
	break;
	case 21:
	{{( p_) = ((( te_)))-1;} t_(TokenType::kw_true); }
	break;
	case 57:
	{{( p_) = ((( te_)))-1;} t_(TokenType::identifier); }
	break;
	}
	}
	goto st8;
tr81:
/* #line 109 "modules\\blt\\meta\\lexer.rl" */
	{( te_) = ( p_);( p_)--;{ t_(TokenType::identifier); }}
	goto st8;
tr136:
/* #line 94 "modules\\blt\\meta\\lexer.rl" */
	{( te_) = ( p_);( p_)--;{ t_(TokenType::bar); }}
	goto st8;
tr137:
/* #line 105 "modules\\blt\\meta\\lexer.rl" */
	{( te_) = ( p_)+1;{ t_(TokenType::bar2); }}
	goto st8;
tr138:
/* #line 95 "modules\\blt\\meta\\lexer.rl" */
	{( te_) = ( p_);( p_)--;{ t_(TokenType::tilde); }}
	goto st8;
tr139:
/* #line 99 "modules\\blt\\meta\\lexer.rl" */
	{( te_) = ( p_)+1;{ t_(TokenType::tilde_eq); }}
	goto st8;
st8:
/* #line 1 "NONE" */
	{( ts_) = 0;}
	if ( ++( p_) == ( pe_) )
		goto _test_eof8;
case 8:
/* #line 1 "NONE" */
	{( ts_) = ( p_);}
/* #line 246 "modules\\blt\\src\\lexer.cpp" */
	switch( (*( p_)) ) {
		case 10: goto tr14;
		case 13: goto st10;
		case 32: goto st9;
		case 34: goto tr16;
		case 35: goto tr17;
		case 36: goto tr18;
		case 37: goto tr19;
		case 38: goto st12;
		case 39: goto tr21;
		case 40: goto tr22;
		case 41: goto tr23;
		case 42: goto tr24;
		case 43: goto tr25;
		case 44: goto tr26;
		case 45: goto st14;
		case 46: goto st16;
		case 47: goto st19;
		case 48: goto tr30;
		case 58: goto tr32;
		case 59: goto tr33;
		case 60: goto st24;
		case 61: goto st25;
		case 62: goto st26;
		case 63: goto tr37;
		case 91: goto tr39;
		case 93: goto tr40;
		case 94: goto tr41;
		case 95: goto tr38;
		case 97: goto st28;
		case 98: goto st30;
		case 99: goto st34;
		case 101: goto st45;
		case 102: goto st50;
		case 105: goto st55;
		case 110: goto st56;
		case 111: goto st59;
		case 116: goto st60;
		case 117: goto st63;
		case 119: goto st70;
		case 123: goto tr53;
		case 124: goto st76;
		case 125: goto tr55;
		case 126: goto st77;
	}
	if ( (*( p_)) < 49 ) {
		if ( 9 <= (*( p_)) && (*( p_)) <= 12 )
			goto st9;
	} else if ( (*( p_)) > 57 ) {
		if ( (*( p_)) > 90 ) {
			if ( 100 <= (*( p_)) && (*( p_)) <= 122 )
				goto tr38;
		} else if ( (*( p_)) >= 65 )
			goto tr38;
	} else
		goto tr31;
	goto tr12;
st9:
	if ( ++( p_) == ( pe_) )
		goto _test_eof9;
case 9:
	switch( (*( p_)) ) {
		case 9: goto st9;
		case 32: goto st9;
	}
	if ( 11 <= (*( p_)) && (*( p_)) <= 12 )
		goto st9;
	goto tr57;
st10:
	if ( ++( p_) == ( pe_) )
		goto _test_eof10;
case 10:
	if ( (*( p_)) == 10 )
		goto tr14;
	goto tr58;
tr16:
/* #line 1 "NONE" */
	{( te_) = ( p_)+1;}
	goto st11;
st11:
	if ( ++( p_) == ( pe_) )
		goto _test_eof11;
case 11:
/* #line 328 "modules\\blt\\src\\lexer.cpp" */
	switch( (*( p_)) ) {
		case 34: goto tr2;
		case 92: goto st1;
	}
	goto st0;
st0:
	if ( ++( p_) == ( pe_) )
		goto _test_eof0;
case 0:
	switch( (*( p_)) ) {
		case 34: goto tr2;
		case 92: goto st1;
	}
	goto st0;
st1:
	if ( ++( p_) == ( pe_) )
		goto _test_eof1;
case 1:
	goto st0;
st12:
	if ( ++( p_) == ( pe_) )
		goto _test_eof12;
case 12:
	if ( (*( p_)) == 38 )
		goto tr61;
	goto tr60;
tr21:
/* #line 1 "NONE" */
	{( te_) = ( p_)+1;}
	goto st13;
st13:
	if ( ++( p_) == ( pe_) )
		goto _test_eof13;
case 13:
/* #line 361 "modules\\blt\\src\\lexer.cpp" */
	switch( (*( p_)) ) {
		case 39: goto tr2;
		case 92: goto st3;
	}
	goto st2;
st2:
	if ( ++( p_) == ( pe_) )
		goto _test_eof2;
case 2:
	switch( (*( p_)) ) {
		case 39: goto tr2;
		case 92: goto st3;
	}
	goto st2;
st3:
	if ( ++( p_) == ( pe_) )
		goto _test_eof3;
case 3:
	goto st2;
st14:
	if ( ++( p_) == ( pe_) )
		goto _test_eof14;
case 14:
	if ( (*( p_)) == 45 )
		goto st15;
	goto tr62;
st15:
	if ( ++( p_) == ( pe_) )
		goto _test_eof15;
case 15:
	switch( (*( p_)) ) {
		case 10: goto tr57;
		case 13: goto tr57;
	}
	goto st15;
st16:
	if ( ++( p_) == ( pe_) )
		goto _test_eof16;
case 16:
	if ( (*( p_)) == 46 )
		goto tr65;
	if ( 48 <= (*( p_)) && (*( p_)) <= 57 )
		goto tr66;
	goto tr64;
tr66:
/* #line 1 "NONE" */
	{( te_) = ( p_)+1;}
	goto st17;
st17:
	if ( ++( p_) == ( pe_) )
		goto _test_eof17;
case 17:
/* #line 412 "modules\\blt\\src\\lexer.cpp" */
	switch( (*( p_)) ) {
		case 69: goto st4;
		case 101: goto st4;
	}
	if ( 48 <= (*( p_)) && (*( p_)) <= 57 )
		goto tr66;
	goto tr67;
st4:
	if ( ++( p_) == ( pe_) )
		goto _test_eof4;
case 4:
	switch( (*( p_)) ) {
		case 43: goto st5;
		case 45: goto st5;
	}
	if ( 48 <= (*( p_)) && (*( p_)) <= 57 )
		goto st18;
	goto tr6;
st5:
	if ( ++( p_) == ( pe_) )
		goto _test_eof5;
case 5:
	if ( 48 <= (*( p_)) && (*( p_)) <= 57 )
		goto st18;
	goto tr6;
st18:
	if ( ++( p_) == ( pe_) )
		goto _test_eof18;
case 18:
	if ( 48 <= (*( p_)) && (*( p_)) <= 57 )
		goto st18;
	goto tr67;
st19:
	if ( ++( p_) == ( pe_) )
		goto _test_eof19;
case 19:
	if ( (*( p_)) == 47 )
		goto tr70;
	goto tr69;
tr30:
/* #line 1 "NONE" */
	{( te_) = ( p_)+1;}
	goto st20;
st20:
	if ( ++( p_) == ( pe_) )
		goto _test_eof20;
case 20:
/* #line 458 "modules\\blt\\src\\lexer.cpp" */
	switch( (*( p_)) ) {
		case 46: goto tr66;
		case 69: goto st4;
		case 88: goto st6;
		case 101: goto st4;
		case 120: goto st6;
	}
	if ( 48 <= (*( p_)) && (*( p_)) <= 57 )
		goto tr31;
	goto tr67;
tr31:
/* #line 1 "NONE" */
	{( te_) = ( p_)+1;}
	goto st21;
st21:
	if ( ++( p_) == ( pe_) )
		goto _test_eof21;
case 21:
/* #line 475 "modules\\blt\\src\\lexer.cpp" */
	switch( (*( p_)) ) {
		case 46: goto tr66;
		case 69: goto st4;
		case 101: goto st4;
	}
	if ( 48 <= (*( p_)) && (*( p_)) <= 57 )
		goto tr31;
	goto tr67;
st6:
	if ( ++( p_) == ( pe_) )
		goto _test_eof6;
case 6:
	if ( (*( p_)) == 46 )
		goto st7;
	if ( (*( p_)) < 65 ) {
		if ( 48 <= (*( p_)) && (*( p_)) <= 57 )
			goto tr10;
	} else if ( (*( p_)) > 70 ) {
		if ( 97 <= (*( p_)) && (*( p_)) <= 102 )
			goto tr10;
	} else
		goto tr10;
	goto tr6;
st7:
	if ( ++( p_) == ( pe_) )
		goto _test_eof7;
case 7:
	if ( (*( p_)) < 65 ) {
		if ( 48 <= (*( p_)) && (*( p_)) <= 57 )
			goto tr11;
	} else if ( (*( p_)) > 70 ) {
		if ( 97 <= (*( p_)) && (*( p_)) <= 102 )
			goto tr11;
	} else
		goto tr11;
	goto tr6;
tr11:
/* #line 1 "NONE" */
	{( te_) = ( p_)+1;}
	goto st22;
st22:
	if ( ++( p_) == ( pe_) )
		goto _test_eof22;
case 22:
/* #line 518 "modules\\blt\\src\\lexer.cpp" */
	switch( (*( p_)) ) {
		case 80: goto st4;
		case 112: goto st4;
	}
	if ( (*( p_)) < 65 ) {
		if ( 48 <= (*( p_)) && (*( p_)) <= 57 )
			goto tr11;
	} else if ( (*( p_)) > 70 ) {
		if ( 97 <= (*( p_)) && (*( p_)) <= 102 )
			goto tr11;
	} else
		goto tr11;
	goto tr67;
tr10:
/* #line 1 "NONE" */
	{( te_) = ( p_)+1;}
	goto st23;
st23:
	if ( ++( p_) == ( pe_) )
		goto _test_eof23;
case 23:
/* #line 538 "modules\\blt\\src\\lexer.cpp" */
	switch( (*( p_)) ) {
		case 46: goto tr11;
		case 80: goto st4;
		case 112: goto st4;
	}
	if ( (*( p_)) < 65 ) {
		if ( 48 <= (*( p_)) && (*( p_)) <= 57 )
			goto tr10;
	} else if ( (*( p_)) > 70 ) {
		if ( 97 <= (*( p_)) && (*( p_)) <= 102 )
			goto tr10;
	} else
		goto tr10;
	goto tr67;
st24:
	if ( ++( p_) == ( pe_) )
		goto _test_eof24;
case 24:
	switch( (*( p_)) ) {
		case 60: goto tr73;
		case 61: goto tr74;
	}
	goto tr72;
st25:
	if ( ++( p_) == ( pe_) )
		goto _test_eof25;
case 25:
	if ( (*( p_)) == 61 )
		goto tr76;
	goto tr75;
st26:
	if ( ++( p_) == ( pe_) )
		goto _test_eof26;
case 26:
	switch( (*( p_)) ) {
		case 61: goto tr78;
		case 62: goto tr79;
	}
	goto tr77;
tr38:
/* #line 1 "NONE" */
	{( te_) = ( p_)+1;}
/* #line 109 "modules\\blt\\meta\\lexer.rl" */
	{act = 57;}
	goto st27;
tr83:
/* #line 1 "NONE" */
	{( te_) = ( p_)+1;}
/* #line 66 "modules\\blt\\meta\\lexer.rl" */
	{act = 16;}
	goto st27;
tr87:
/* #line 1 "NONE" */
	{( te_) = ( p_)+1;}
/* #line 63 "modules\\blt\\meta\\lexer.rl" */
	{act = 13;}
	goto st27;
tr93:
/* #line 1 "NONE" */
	{( te_) = ( p_)+1;}
/* #line 62 "modules\\blt\\meta\\lexer.rl" */
	{act = 12;}
	goto st27;
tr99:
/* #line 1 "NONE" */
	{( te_) = ( p_)+1;}
/* #line 64 "modules\\blt\\meta\\lexer.rl" */
	{act = 14;}
	goto st27;
tr103:
/* #line 1 "NONE" */
	{( te_) = ( p_)+1;}
/* #line 60 "modules\\blt\\meta\\lexer.rl" */
	{act = 10;}
	goto st27;
tr105:
/* #line 1 "NONE" */
	{( te_) = ( p_)+1;}
/* #line 56 "modules\\blt\\meta\\lexer.rl" */
	{act = 6;}
	goto st27;
tr110:
/* #line 1 "NONE" */
	{( te_) = ( p_)+1;}
/* #line 70 "modules\\blt\\meta\\lexer.rl" */
	{act = 20;}
	goto st27;
tr111:
/* #line 1 "NONE" */
	{( te_) = ( p_)+1;}
/* #line 58 "modules\\blt\\meta\\lexer.rl" */
	{act = 8;}
	goto st27;
tr112:
/* #line 1 "NONE" */
	{( te_) = ( p_)+1;}
/* #line 55 "modules\\blt\\meta\\lexer.rl" */
	{act = 5;}
	goto st27;
tr115:
/* #line 1 "NONE" */
	{( te_) = ( p_)+1;}
/* #line 69 "modules\\blt\\meta\\lexer.rl" */
	{act = 19;}
	goto st27;
tr116:
/* #line 1 "NONE" */
	{( te_) = ( p_)+1;}
/* #line 68 "modules\\blt\\meta\\lexer.rl" */
	{act = 18;}
	goto st27;
tr117:
/* #line 1 "NONE" */
	{( te_) = ( p_)+1;}
/* #line 67 "modules\\blt\\meta\\lexer.rl" */
	{act = 17;}
	goto st27;
tr120:
/* #line 1 "NONE" */
	{( te_) = ( p_)+1;}
/* #line 71 "modules\\blt\\meta\\lexer.rl" */
	{act = 21;}
	goto st27;
tr125:
/* #line 1 "NONE" */
	{( te_) = ( p_)+1;}
/* #line 65 "modules\\blt\\meta\\lexer.rl" */
	{act = 15;}
	goto st27;
tr128:
/* #line 1 "NONE" */
	{( te_) = ( p_)+1;}
/* #line 61 "modules\\blt\\meta\\lexer.rl" */
	{act = 11;}
	goto st27;
tr133:
/* #line 1 "NONE" */
	{( te_) = ( p_)+1;}
/* #line 57 "modules\\blt\\meta\\lexer.rl" */
	{act = 7;}
	goto st27;
tr135:
/* #line 1 "NONE" */
	{( te_) = ( p_)+1;}
/* #line 59 "modules\\blt\\meta\\lexer.rl" */
	{act = 9;}
	goto st27;
st27:
	if ( ++( p_) == ( pe_) )
		goto _test_eof27;
case 27:
/* #line 653 "modules\\blt\\src\\lexer.cpp" */
	if ( (*( p_)) == 95 )
		goto tr38;
	if ( (*( p_)) < 65 ) {
		if ( 48 <= (*( p_)) && (*( p_)) <= 57 )
			goto tr38;
	} else if ( (*( p_)) > 90 ) {
		if ( 97 <= (*( p_)) && (*( p_)) <= 122 )
			goto tr38;
	} else
		goto tr38;
	goto tr80;
st28:
	if ( ++( p_) == ( pe_) )
		goto _test_eof28;
case 28:
	switch( (*( p_)) ) {
		case 95: goto tr38;
		case 110: goto st29;
	}
	if ( (*( p_)) < 65 ) {
		if ( 48 <= (*( p_)) && (*( p_)) <= 57 )
			goto tr38;
	} else if ( (*( p_)) > 90 ) {
		if ( 97 <= (*( p_)) && (*( p_)) <= 122 )
			goto tr38;
	} else
		goto tr38;
	goto tr81;
st29:
	if ( ++( p_) == ( pe_) )
		goto _test_eof29;
